[gd_scene load_steps=2 format=3 uid="uid://dtc2yh7cw8bbo"]

[ext_resource type="Script" path="res://scripts/sim.gd" id="1_yn6os"]

[node name="Sim" type="Node2D"]
script = ExtResource("1_yn6os")

[node name="StartScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="StartScreen"]
offset_left = 489.0
offset_top = 348.0
offset_right = 639.0
offset_bottom = 452.0

[node name="Start" type="Button" parent="StartScreen/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Start"

[node name="Quit" type="Button" parent="StartScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"

[node name="RichTextLabel" type="RichTextLabel" parent="StartScreen"]
offset_left = 390.0
offset_top = 201.0
offset_right = 805.0
offset_bottom = 327.0
theme_override_font_sizes/bold_italics_font_size = 3
theme_override_font_sizes/italics_font_size = 3
theme_override_font_sizes/mono_font_size = 3
theme_override_font_sizes/normal_font_size = 34
text = "Particle System Demo"

[node name="Label" type="Label" parent="StartScreen"]
offset_left = 518.0
offset_top = 252.0
offset_right = 606.0
offset_bottom = 275.0
text = "Luis Drayer"

[connection signal="pressed" from="StartScreen/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="StartScreen/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
